# Maskininlarning-Projekt2

./: .gitignore  README.md  make.sh  make_gtest.sh  run_gpio  run_gpio_tests
inc/: node.hpp
project2/inc/: gpio_utils.hpp  node.hpp
project2/src/: gpio_utils.cpp  main.cpp  node.cpp
project2/test/: test_neural_network.cpp
src/: gpio_utils.cpp  main.cpp  node.cpp
test/: CMakeLists.txt  test_neural_network.cpp
